Trying to make share stop highlighting when touched on mobile.

--- a/public/stylesheets/very.css
+++ b/public/stylesheets/very.css
@@ -53,9 +53,6 @@ body {
     z-index: 2;
 
     font-family: 'Oleo Script', 'Comic Sans', sans-serif;
-
-    -webkit-user-select: none;
-    user-select: none;
 }
 
 #share:hover {
@@ -128,6 +125,18 @@ body {
 	background-color: #bf1600;
 }
 
+.untouchable {
+	outline: none !important;
+	-webkit-user-modify: read-only !important;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
+	-webkit-tap-highlight-color: transparent !important; /* For some Androids */
+	-webkit-touch-callout: none !important;
+	-webkit-user-select: none !important;
+	-khtml-user-select: none !important;
+	-moz-user-select: none !important;
+	-ms-user-select: none !important;
+	user-select: none !important;
+}
 #social img {
 	max-width: 100%;
 	max-height: 100%;
